--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,11 +6,11 @@
 
 @import
 
-    "skins/{{ site.text_skin | default: site.data.variables.default.text_skin }}",
+    // "skins/{{ site.text_skin | default: site.data.variables.default.text_skin }}",
     // "skins/chocolate",
     // "skins/dark",
     // "skins/default",
-    // "skins/forest",
+    "skins/forest",
     // "skins/ocean",
     // "skins/orange",
 
